--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -160,11 +160,12 @@ CreatLeadScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.Disabled
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1.X+Image1.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =8
@@ -173,11 +174,12 @@ CreatLeadScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.Disabled
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_1.X+Image1_1.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =9
@@ -186,11 +188,12 @@ CreatLeadScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.Disabled
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_2.X+Image1_2.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =10
@@ -199,11 +202,12 @@ CreatLeadScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.Disabled
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_3.X+Image1_3.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
@@ -289,7 +293,7 @@ CreatLeadScreen As screen:
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
                     Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
-                    X: =If(Parent.Width<378,Parent.Width/6,Parent.Width<500,Parent.Width/5,Parent.Width/5)
+                    X: =If(Parent.Width<378,Parent.Width/9,Parent.Width<500,Parent.Width/10,Parent.Width/11)
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
