--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -175,60 +175,64 @@ EstimateScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_16.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_16.X+Image1_16.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
-                        If(Parent.Height<Parent.Width,(Image1_16.Height+Image1_16.Y)/1.5,(Image1_16.Height+Image1_16.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =8
 
                 IconLine2CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_16.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_17.X+Image1_17.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
-                        If(Parent.Height<Parent.Width,(Image1_16.Height+Image1_16.Y)/1.5,(Image1_16.Height+Image1_16.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =9
 
                 IconLine3CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_16.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_18.X+Image1_18.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
-                        If(Parent.Height<Parent.Width,(Image1_16.Height+Image1_16.Y)/1.5,(Image1_16.Height+Image1_16.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =10
 
                 IconLine4CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisabledColor: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_16.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_19.X+Image1_19.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
-                        If(Parent.Height<Parent.Width,(Image1_16.Height+Image1_16.Y)/1.5,(Image1_16.Height+Image1_16.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
 
                 lblStep1CL_3 As label:
@@ -313,7 +317,7 @@ EstimateScreen As screen:
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
                     Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
-                    X: =If(Parent.Width<378,Parent.Width/6,Parent.Width<500,Parent.Width/5,Parent.Width/5)
+                    X: =If(Parent.Width<378,Parent.Width/9,Parent.Width<500,Parent.Width/10,Parent.Width/11)
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
