--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -172,61 +172,65 @@ ImageUploadScreen As screen:
                 IconLine1CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_21.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_21.X+Image1_21.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         
-                        If(Parent.Height<Parent.Width,(Image1_21.Height+Image1_21.Y)/1.5,(Image1_21.Height+Image1_21.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =8
 
                 IconLine2CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_21.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_22.X+Image1_22.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         
-                        If(Parent.Height<Parent.Width,(Image1_21.Height+Image1_21.Y)/1.5,(Image1_21.Height+Image1_21.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =9
 
                 IconLine3CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_21.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_23.X+Image1_23.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         
-                        If(Parent.Height<Parent.Width,(Image1_21.Height+Image1_21.Y)/1.5,(Image1_21.Height+Image1_21.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =10
 
                 IconLine4CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
-                    Height: =Parent.Height/13
+                    Fill: =RGBA(202, 202, 202, 1)
+                    Height: =Image1_21.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
-                        If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
+                        If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
                     X: =Image1_24.X+Image1_24.Width
                     Y: |-
                         =//If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
                         
-                        If(Parent.Height<Parent.Width,(Image1_21.Height+Image1_21.Y)/1.5,(Image1_21.Height+Image1_21.Y)/3)
+                        If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
 
                 lblStep1CL_4 As label:
@@ -306,7 +310,7 @@ ImageUploadScreen As screen:
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
                     Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
-                    X: =If(Parent.Width<378,Parent.Width/6,Parent.Width<500,Parent.Width/5,Parent.Width/5)
+                    X: =If(Parent.Width<378,Parent.Width/9,Parent.Width<500,Parent.Width/10,Parent.Width/11)
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
@@ -635,10 +639,10 @@ ImageUploadScreen As screen:
 
         IconImageIS_1 As icon.Cancel:
             Color: =RGBA(0, 0, 0, 1)
-            Height: =Parent.Height/18
+            Height: =Parent.Height/20
             Icon: =Icon.Cancel
             OnSelect: =Set(VarImagePopup,false)
-            Width: =Parent.Height/18
+            Width: =Parent.Height/20
             X: =Image2.X+(Image2.Width-Self.Width)
             Y: =Image2.Y
             ZIndex: =2
