--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -131,19 +131,28 @@ SubmittedLeadScreen As screen:
             ZIndex: =2
 
             btnheaderCL_1 As button:
+                Align: =Align.Left
                 Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height
                 PaddingBottom: =0
-                PaddingLeft: =20
+                PaddingLeft: =40
                 PaddingRight: =20
                 PaddingTop: =0
                 Size: =If(Parent.Width<500,14,Parent.Width>500,20,18)
                 Text: =Header &" Leads"
                 Width: =Parent.Width
                 ZIndex: =1
+
+            Label2 As label:
+                Align: =Align.Right
+                Height: =Parent.Height
+                PaddingRight: =40
+                Text: =If(toggleDS_1.Value=true,toggleDS_1.TrueText,toggleDS_1.FalseText)
+                Width: =Parent.Width
+                ZIndex: =2
 
         ctnMiddleSLS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(255, 255, 255, 1)
@@ -163,7 +172,11 @@ SubmittedLeadScreen As screen:
                 DelayItemLoading: =true
                 Height: =Parent.Height-ctnSearchBarSLS.Height
                 Items: |-
-                    =If(cumulatively=true, [ 
+                    =//If(cumulatively=true,
+                    // )],yearly=true,[Text( Year(Now()))])
+                    
+                          //  First(Filter(LeadInformations,Email=User().Email)).Year('Created On')
+                    If(cumulatively=true, [ 
                        Text( Year(Today())),
                         Text( Year(Today())-1),
                         Text( Year(Today())-2),
@@ -176,7 +189,6 @@ SubmittedLeadScreen As screen:
                         Text(Year(Today())-9),
                         Text(Year(Today())-10),
                         Text(Year(Today())-11)],yearly=true,[Text( Year(Today()))])
-                        
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
                 TemplatePadding: =4
@@ -198,7 +210,7 @@ SubmittedLeadScreen As screen:
                     PaddingRight: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
-                    Text: =ThisItem.Value
+                    Text: =Year(ThisItem.Value)
                     Width: =Parent.Width/8
                     X: =lblTitleYearSLS.X
                     Y: =lblTitleYearSLS.Y+lblTitleYearSLS.Height+10
@@ -209,10 +221,10 @@ SubmittedLeadScreen As screen:
                     Items: |-
                         =//Sort
                         Search(Sort(Filter(LeadInformations,//Email=User().Email  && 
-                        Text(Year('Created On'))=Title2.Text&&If(Header="Open",LeadStatus="Submitted",LeadStatus=Header)&&Email=User().Email),'Created On',SortOrder.Ascending),IntxtSearchBoxSLS.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname")
+                        Text(Year('Created On'))=Title2.Text && If(Header="Open",LeadStatus="Submitted",LeadStatus=Header) &&Email=User().Email),'Created On',SortOrder.Ascending),IntxtSearchBoxSLS.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname","shlrf_zipcode")
                     Layout: =Layout.Vertical
                     TemplatePadding: =0
-                    TemplateSize: =260
+                    TemplateSize: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",260,160)
                     Visible: |
                         =ThisItem.IsSelected && locInfoExpanded
                     Width: =Parent.Width/1.05
@@ -224,7 +236,7 @@ SubmittedLeadScreen As screen:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         BorderThickness: =2
                         Fill: =RGBA(0, 0, 0, 0)
-                        Height: =Parent.TemplateHeight/1.04
+                        Height: =Parent.TemplateHeight/1.06
                         HoverFill: =RGBA(0, 0, 0, 0)
                         OnSelect: |-
                             =//Navigate(ViewLeadScreen);
@@ -248,6 +260,7 @@ SubmittedLeadScreen As screen:
                             =//"Sold Incentives $ : "&  " " & 0
                             "Price:" & " " & 0
                         VerticalAlign: =VerticalAlign.Top
+                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Parent.Width/2.55
                         X: =20
                         Y: =lblEstimateNumberSLS.Height+lblEstimateNumberSLS.Y
@@ -268,6 +281,7 @@ SubmittedLeadScreen As screen:
                                       VarSoldIncetives=true,"Sold Incentives $:" & " " & "0",
                                       VarTotalIncentives=true,"Total Incentives $:" & " "& "0")
                         VerticalAlign: =VerticalAlign.Top
+                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Parent.Width/1.08
                         X: =20
                         Y: =20
@@ -279,6 +293,7 @@ SubmittedLeadScreen As screen:
                         Fill: =RGBA(202, 202, 202, 1)
                         Height: =2
                         OnSelect: =Select(Parent)
+                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Separator3_1.Width-40
                         X: =20
                         Y: =lblTitleTotalIncentivesSLS.Y+lblTitleTotalIncentivesSLS.Height
@@ -295,6 +310,7 @@ SubmittedLeadScreen As screen:
                         Text: |-
                             ="Estimate Number :" & " " 
                         VerticalAlign: =VerticalAlign.Top
+                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Parent.Width/1.08
                         X: =20
                         Y: =lineEstimateSLS.Y+lineEstimateSLS.Height+10
@@ -325,7 +341,7 @@ SubmittedLeadScreen As screen:
                         Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                         Width: =Parent.Width/1.08
                         X: =20
-                        Y: =lineEstimatenoSLS.Y+lineEstimatenoSLS.Height+10
+                        Y: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",lineEstimatenoSLS.Y+lineEstimatenoSLS.Height+10,20)
                         ZIndex: =17
 
                     htmltxtAddressSLS As htmlViewer:
@@ -397,7 +413,7 @@ SubmittedLeadScreen As screen:
                         RadiusTopRight: =8
                         Size: =24
                         Text: =""
-                        Width: =If(Parent.Width<378,Parent.Width/1.07,Parent.Width<500,Parent.Width/1.07,Parent.Width/1.03)
+                        Width: =If(Parent.Width<378,Parent.Width/1.07,Parent.Width<500,Parent.Width/1.05,Parent.Width/1.03)
                         Y: =10
                         ZIndex: =21
 
@@ -407,6 +423,7 @@ SubmittedLeadScreen As screen:
                         Fill: =RGBA(202, 202, 202, 1)
                         Height: =2
                         OnSelect: =Select(Parent)
+                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Separator3_1.Width-40
                         X: =20
                         Y: =lblPriceSLS.Height+lblPriceSLS.Y
@@ -502,12 +519,17 @@ SubmittedLeadScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
                     Text: |-
-                        =Value(Sum(
+                        =If(btnheaderCL_1.Text="Quoted Leads",Value(Sum(
+                            Filter(
+                                GCTotalIncentives,
+                                Year(Year) = Year(Now())),TotalproposedIncentives
+                        )),Value(Sum(
                             Filter(
                                 GCTotalIncentives,
                                 Year(Year) = Year(Now())),TotalSoldIncentives
-                        ))
+                        )))
                     VerticalAlign: =VerticalAlign.Top
+                    Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =Parent.Width/3
                     X: =lblTotalLeadsSLS.Width+lblTotalLeadsSLS.X+20
                     Y: =lblTotalIncentivesSLS.Y+lblTotalIncentivesSLS.Height+10
@@ -527,6 +549,7 @@ SubmittedLeadScreen As screen:
                         =//ThisItem.Value\
                         "Total Incentives"
                     VerticalAlign: =VerticalAlign.Top
+                    Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =Parent.Width/3
                     X: =lblTotalLeadsSLS.X+lblTotalLeadsSLS.Width
                     Y: =2*(Button3.Y)
@@ -577,6 +600,7 @@ SubmittedLeadScreen As screen:
                     Height: =rectangleYearSLS.Height/2
                     Icon: =Icon.VerticalLine
                     OnSelect: =Select(Parent)
+                    Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =2
                     X: =lblTotalIncentivesSLS.X
                     Y: =Parent.Y/3
@@ -601,7 +625,7 @@ SubmittedLeadScreen As screen:
                     Height: =rectangleYearSLS.Height/1.2
                     Image: =accordianPlus
                     OnSelect: |-
-                        =Select(Parent); UpdateContext({locInfoExpanded:true});Set(Vardown,ThisItem.Value);
+                        =Select(Parent); UpdateContext({locInfoExpanded:true});Set(Vardown,Year(ThisItem.Value));
                     Visible: |
                         =!(ThisItem.IsSelected && locInfoExpanded)
                     Width: =Parent.Width/14
@@ -632,17 +656,20 @@ SubmittedLeadScreen As screen:
                 ZIndex: =5
 
                 IntxtSearchBoxSLS As text:
+                    AlignInContainer: =AlignInContainer.Center
                     BorderColor: =RGBA(255, 0, 0, 1)
                     Clear: =true
                     Color: =RGBA(255, 0, 0, 1)
                     Default: =""
                     DisabledBorderColor: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
-                    HintText: ="Search Leads"
+                    Height: =50
+                    HintText: ="Search Leads by Contract number or building name or address or zipcode "
                     HoverBorderColor: =RGBA(255, 0, 0, 1)
                     HoverFill: =RGBA(0, 0, 0, 0)
                     LayoutMinHeight: =70
                     LayoutMinWidth: =Self.Width
+                    Mode: =TextMode.MultiLine
                     OnChange: |-
                         =UpdateContext({locInfoExpanded:true})
                     OnSelect: =
@@ -659,12 +686,14 @@ SubmittedLeadScreen As screen:
                 IconSearchSLS As icon.Search:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =2
-                    Color: =RGBA(255, 0, 0, 1)
-                    Height: =40
+                    Color: =RGBA(116, 116, 116, 1)
+                    Height: =50
                     Icon: =Icon.Search
                     OnSelect: |-
                         =UpdateContext({locInfoExpanded:true})
                     PaddingBottom: =5
+                    PaddingLeft: =5
+                    PaddingRight: =5
                     PaddingTop: =5
                     Width: =(ctnSearchBarSLS.Width-IntxtSearchBoxSLS.Width)/2
                     X: =468
