--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1044,7 +1044,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                     UnitDownLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
-                        BorderColor: =RGBA(202, 202, 202, 1)
+                        BorderColor: =RGBA(0, 0, 0, 0)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_checklist"
                         Default: =ThisItem.IsUnitDown
@@ -1087,7 +1087,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         CboxUDLSS As checkbox:
-                            BorderColor: =RGBA(202, 202, 202, 1)
+                            BorderColor: =RGBA(0, 0, 0, 0)
                             CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxUnitDown.Value
@@ -1103,7 +1103,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     AdditionalExpensesRequiredLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
-                        BorderColor: =RGBA(202, 202, 202, 1)
+                        BorderColor: =RGBA(0, 0, 0, 0)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_additionalexpensesrequired"
                         Default: =ThisItem.AdditionalExpensesRequired
@@ -1146,6 +1146,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         cboxAELSS As checkbox:
+                            BorderColor: =RGBA(0, 0, 0, 0)
                             CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxAdditionalExpensesRequired.Value
@@ -1161,7 +1162,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     TravelRequiredLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
-                        BorderColor: =RGBA(202, 202, 202, 1)
+                        BorderColor: =RGBA(0, 0, 0, 0)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_travelrequired"
                         Default: =ThisItem.TravelRequired
@@ -1204,6 +1205,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         cboxTravelRequiredLSS As checkbox:
+                            BorderColor: =RGBA(0, 0, 0, 0)
                             CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxTravelRequired.Value
@@ -1219,7 +1221,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =5
 
                     CommunicatedtoCustomerLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
-                        BorderColor: =RGBA(202, 202, 202, 1)
+                        BorderColor: =RGBA(0, 0, 0, 0)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="crd59_communicatedtocustomer"
                         Default: =ThisItem.CommunicatedToCustomer
@@ -1262,6 +1264,7 @@ LeadSummaryScreen As screen:
                             ZIndex: =4
 
                         CboxCCLSS As checkbox:
+                            BorderColor: =RGBA(0, 0, 0, 0)
                             CheckboxBorderColor: =RGBA(202, 202, 202, 1)
                             CheckboxSize: =50
                             Default: =CboxCommunicatedtoCustomer.Value
@@ -1402,6 +1405,7 @@ LeadSummaryScreen As screen:
                                 }
                             )
                         );
+                        Set(VarNotificationSuccess,true);
                         /*Notify(
                             "Form has been submitted succuessfully.",
                             NotificationType.Success
