--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -420,7 +420,7 @@ CreatLeadScreen As screen:
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
-                        OnChange: =Set(VarContractNumber,true)
+                        OnChange: =Set(VarContractNumber,true);
                         PaddingBottom: =0
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
@@ -437,15 +437,16 @@ CreatLeadScreen As screen:
 
                     ErrorMessageContractNumber As label:
                         AutoHeight: =true
+                        Color: =RGBA(255, 0, 0, 1)
                         Height: =0
                         Live: =Live.Assertive
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
                         PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
+                        Size: =12
+                        Text: ="Contract number is not found"
+                        Visible: =If(LookUp(ContractDataVS,CONTR_NUM=IntxtContractNumber.Text).CONTR_NUM<>IntxtContractNumber.Text,true,false)
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =IntxtContractNumber.Y + IntxtContractNumber.Height
@@ -453,10 +454,11 @@ CreatLeadScreen As screen:
 
                     StarVisibleContractNumber As label:
                         Align: =Align.Center
+                        Color: =RGBA(255, 0, 0, 1)
                         Height: =lblContractNumber.Height
                         Size: =21
                         Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                        Visible: =If(LookUp(ContractDataVS,CONTR_NUM=IntxtContractNumber.Text).CONTR_NUM<>IntxtContractNumber.Text,true,false)
                         Width: =30
                         Wrap: =false
                         Y: =lblContractNumber.Y
@@ -498,9 +500,11 @@ CreatLeadScreen As screen:
                         BorderColor: =If(IsBlank(Parent.Error), Color.LightGray, Color.Red)
                         Default: |-
                             =//Parent.Default
-                            LookUp(ContractDataVS,CONTR_NUM=IntxtContractNumber.Text,CUST_ZIP)
+                            LookUp(SHContracts,ARBPL_CONTRACT=IntxtContractNumber.Text,CUST_ZIP)
                         DelayOutput: =true
-                        DisplayMode: =Parent.DisplayMode
+                        DisplayMode: |-
+                            =//Parent.DisplayMode
+                            DisplayMode.Disabled
                         FocusedBorderThickness: =2
                         Height: =50
                         HintText: ="Zipcode"
@@ -585,9 +589,10 @@ CreatLeadScreen As screen:
                         BorderColor: =If(IsBlank(Parent.Error), Color.LightGray, Color.Red)
                         Default: |-
                             =//Parent.Default
-                            LookUp(ContractDataVS,CONTR_NUM=IntxtContractNumber.Text,CUST_CITY)
+                            LookUp(SHContracts,ARBPL_CONTRACT=IntxtContractNumber.Text,CUST_CITY)
                         DelayOutput: =true
-                        DisplayMode: =Parent.DisplayMode
+                        DisabledBorderColor: =RGBA(149, 149, 149, 1)
+                        DisplayMode: =DisplayMode.Disabled
                         FocusedBorderThickness: =2
                         Font: =Font.Arial
                         Height: =50
@@ -611,15 +616,19 @@ CreatLeadScreen As screen:
 
                     ErrorMessageBuilldingName As label:
                         AutoHeight: =true
-                        Height: =0
+                        Color: =RGBA(255, 0, 0, 1)
+                        DisplayMode: =DisplayMode.View
+                        Height: =lblBuildingName.Height
                         Live: =Live.Assertive
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
                         PaddingTop: =0
-                        Size: =24
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
+                        Size: =12
+                        Text: ="Contract Number is mandetory"
+                        Visible: |-
+                            =//IsBlankOrError(IntxtContractNumber.Text)
+                            false
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =IntxtBuildingName.Y + IntxtBuildingName.Height
@@ -627,10 +636,11 @@ CreatLeadScreen As screen:
 
                     StarVisibleBuildingName As label:
                         Align: =Align.Center
+                        Color: =RGBA(255, 0, 0, 1)
                         Height: =lblBuildingName.Height
                         Size: =21
                         Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                        Visible: =IsBlankOrError(IntxtContractNumber.Text)
                         Width: =30
                         Wrap: =false
                         Y: =lblBuildingName.Y
@@ -674,9 +684,9 @@ CreatLeadScreen As screen:
                         BorderColor: =If(IsBlank(Parent.Error),Color.LightGray, Color.Red)
                         Default: |-
                             =//Parent.Default
-                            LookUp(ContractDataVS,CONTR_NUM=IntxtContractNumber.Text,CUST_ADDR)
+                            LookUp(SHContracts,ARBPL_CONTRACT=IntxtContractNumber.Text,CUST_ADDR)
                         DelayOutput: =true
-                        DisplayMode: =Parent.DisplayMode
+                        DisplayMode: =DisplayMode.Disabled
                         FocusedBorderThickness: =2
                         Font: =Font.Arial
                         Height: =80
@@ -783,9 +793,11 @@ CreatLeadScreen As screen:
                     Font: =Font.Arial
                     HoverFill: =Color.Red
                     OnSelect: |
-                        =Set(VarIndicatorUS,false);
+                        =If(LookUp(SHContracts,ARBPL_CONTRACT=IntxtContractNumber.Text).ARBPL_CONTRACT<>IntxtContractNumber.Text || IsBlank(IntxtContractNumber.Text),
+                        Notify("Contract number is mandatory"),
+                        Set(VarIndicatorUS,false);
                         Set(VarIndicator,true);
-                        Navigate(UnitScreen);
+                        Navigate(UnitScreen);)
                     Size: =If(Parent.Width<358,12,Parent.Width>358,14)
                     Text: ="Next"
                     Width: =If(Parent.Width<Parent.Height,Parent.Width/8,Parent.Width/5)
