--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1,4 +1,5 @@
 LeadSummaryScreen As screen:
+    OnVisible: =Set(VarNotification,false)
 
     ctnMainLSS As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
@@ -1407,12 +1408,12 @@ LeadSummaryScreen As screen:
                                 }
                             )
                         );
+                        Set(VarNotificationloding,false);
                         Set(VarNotificationSuccess,true);
                         /*Notify(
                             "Form has been submitted succuessfully.",
                             NotificationType.Success
                         );*/
-                        Set(VarSuccessNotification,true);
                     Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                     Text: ="Submit"
                     Width: =If(Parent.Width<Parent.Height,Parent.Width/8,Parent.Width/5)
@@ -1447,9 +1448,10 @@ LeadSummaryScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    Container5 As groupContainer.manualLayoutContainer:
+    PopopNotificationSS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
+        Visible: =VarNotification
         Width: =Parent.Width
         ZIndex: =4
 
@@ -1474,7 +1476,7 @@ LeadSummaryScreen As screen:
             Container9 As groupContainer.verticalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =Parent.Height/5
+                Height: =Parent.Height/3
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
@@ -1486,6 +1488,7 @@ LeadSummaryScreen As screen:
                     AlignInContainer: =AlignInContainer.Center
                     Height: =Parent.Height
                     Image: =If(VarNotificationloding,'waiting-icon-gif-4',VarNotificationSuccess,Group)
+                    PaddingTop: =40
                     Width: =Parent.Width
                     ZIndex: =1
 
@@ -1493,7 +1496,9 @@ LeadSummaryScreen As screen:
                 Align: =Align.Center
                 AlignInContainer: =AlignInContainer.Center
                 Font: =Font.Arial
-                Height: =200
+                FontWeight: =FontWeight.Semibold
+                Height: =100
+                Size: =14
                 Text: =If(VarNotificationloding,"Submitting",VarNotificationSuccess,"Lead Submitted Successfully.")
                 Width: =Parent.Width
                 ZIndex: =2
@@ -1502,6 +1507,7 @@ LeadSummaryScreen As screen:
                 AlignInContainer: =AlignInContainer.Center
                 Fill: =RGBA(255, 0, 0, 1)
                 Font: =Font.Arial
+                HoverFill: =ColorFade(Self.Fill, -20%)
                 OnSelect: =Navigate(DashboardScreen);
                 Size: =14
                 Text: ="Ok"
